--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,7 +13,10 @@
     "babel-preset-es2015": "^6.24.0",
     "babel-runtime": "^6.23.0",
     "babelify": "^7.3.0",
+    "bootstrap": "^3.3.7",
     "browserify": "^14.1.0",
+    "browserify-css": "^0.10.1",
+    "jquery": "^3.2.1",
     "pug": "^2.0.0-rc.2",
     "pug-cli": "^1.0.0-alpha6",
     "swagger-client": "^3.0.13"
